# macos

./: .gitignore  .gitmodules  Brewfile  Makefile  README.md  aqua.yaml  install.sh  justfile  lefthook.yml
.github/: CODEOWNERS
.windows_and_linux/: README.md  windows_install.ps1
aliases/: alias_assemble.zsh  alias_cpp.zsh  alias_docker.zsh  alias_go.zsh  alias_heroku.zsh  alias_mysql.zsh
bookmarks/: bookmarks.html  bookmarks_2020_02_04.html
bundle/: .misc.md  .windows.md  Brewfile  Cargofile  ChromeExtentions.md  Cpanfile  Npmfile  Pipfile  README.md  Vsplug  copy.zsh  install.sh  install.zsh
dotfiles/: .alacritty.yml  .carbon-now.json  .coc-settings.json  .csscomb.json  .emacs.el  .flake8  .gitattributes  .gitconfig  .gitignore  .hyper.js  .my.cnf  .my.conf  .myclirc  .node_template  .npm-init.js  .npmrc  (+19 more)
dotfiles/.python_template/: Makefile  README.md  conftest.py  entrypoint_monkeytype.py  pyproject.toml  type_info.json
dotfiles/.trashrc/: .curlrc  .eslintignore  .eslintrc.json  .lessrc  .markdownlint.json  .my.cnf  .myclirc  .mypy.ini  .npm-init.js  .npmrc  .perltidyrc  .psqlrc  .textlintrc.json  .tool-versions  README.md  lefthook.yml  postcss.config.js  pyproject.toml  pytest.ini  rollup.config.js  snowpack.config.js  tailwind.config.js  webpack.common.js  webpack.dev.js  webpack.prd.js
dotfiles/.trashrc/.config/neofetch/: config.conf
dotfiles/.trashrc/.emacs.d/: init.el
dotfiles/.trashrc/.terminalizer/: config.yml
dotfiles/.trashrc/IntelliJ/: installed.txt
dotfiles/.trashrc/IntelliJ/options/: editor.xml
dotfiles/.trashrc/system/: README.md
(+153 files in other folders)
