[tool.poetry]
name = "merge_insertion_python"
version = "1.0.0"
description = "The first implementation of Ford-Johnson algorithm in python."
authors = ["ryuta69 <eyma22s.yu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
isort = "^5.6.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.1"
pyannotate = "^1.2.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
